Bug 62360 - Affixed forms of %, §, °C aren't recognized by the Hungarian spell checker
Summary: Affixed forms of %, §, °C aren't recognized by the Hungarian spell checker
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0 target:4.0.3 target:3.6.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-03-15 03:29 UTC by László Németh
Modified: 2013-03-15 11:27 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2013-03-15 03:29:32 UTC
Hungarian word forms, eg. "%-kal", "§-ában", "°C-os" aren't recognized by the spell checker, resulted by the modified (intended only for word counting) word breaking of Writer (http://cgit.freedesktop.org/libreoffice/core/commit/?id=417823d4c23100713813171865d70f5e2719ace2).
Comment 1 Commit Notification 2013-03-15 03:56:32 UTC
Laszlo Nemeth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ff5720b8aa993c24fe00f1e326c3cb80b2d8eb5

fdo#62360: fix word breaking in Writer for spell checking



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2013-03-15 07:13:53 UTC
Laszlo Nemeth committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76d1ff428bd514e858c91ca9b521afd729f5f242&h=libreoffice-4-0

fdo#62360: fix word breaking in Writer for spell checking


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-03-15 11:27:24 UTC
Laszlo Nemeth committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f0bc2c68ac003f09afe0ae89f12cb4ea5026f73f&h=libreoffice-3-6

fdo#62360: fix word breaking in Writer for spell checking


It will be available in LibreOffice 3.6.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.