fdo#62360: fix word breaking in Writer for spell checking

Change-Id: I0f23e9f7f076f3a82d1d5df92d9d4d3919fc816d